# googletestexample

./: .gitignore  CMakeLists.txt  Main.cpp  TestRunner.cpp
Account/: Account.cpp  Account.hpp
Database/: Employee.hpp  EmployeeManager.cpp  EmployeeManager.hpp  IDatabaseConnection.cpp  IDatabaseConnection.hpp
MyMath/: MyMath.cpp  MyMath.hpp
Validator/: Validator.cpp  Validator.hpp
